# re-photografing

./: CMakeLists.txt  README.md  poznámky.docx  result.yml  velehrad.ply  zadaniBP.docx
data/: cookies_ORB.yml
doc/: 3D_rekonstrukce_biskupskeho_palace.txt  3D_rekonstrukce_namesti_svobody.txt  Dokumentace ke dni 25.1.2017.txt  ISP_prezentace.pptx  real-time_navigation_diagram_aktivit.xml  tmp.docx  ~$daniBP.docx
resource/data/: extrinsics.yml  result.yml  velehrad.ply  vocabulary.yaml
resource/mesh/: 3D_rekonstrukce_galerie.txt  3D_rekonstrukce_grand_hotel.txt  3D_rekonstrukce_janackovo_divadlo.txt  3D_rekonstrukce_moravskeho_zemskeho_divadla.txt  3D_rekonstrukce_ulice_ceska.txt
src/: Android.cpp  Android.h  CameraCalibrator.cpp  CameraCalibrator.h  Line.cpp  Line.h  Line2D.cpp  Line2D.h  MSAC.cpp  MSAC.h  Main.cpp  Main.h  Model.cpp  Model.h  ModelRegistration.cpp  ModelRegistration.h  MyMatcher.h  MyRobustMatcher.h  PnPProblem.cpp  PnPProblem.h  RobustMatcher.cpp  RobustMatcher.h  Utils.cpp  Utils.h  ann.cpp  ann2.cpp  errorNIETO.cpp  errorNIETO.h  klt.cpp  klt.h  lmmin.cpp  lmmin.h  main.cpp  main.h  main_detection.cpp  main_registration.cpp  vzor.cpp  vzor.h
